--- a/packages/chunk-generator/src/assets/SideBar/container.mdx
+++ b/packages/chunk-generator/src/assets/SideBar/container.mdx
@@ -1,14 +1,3 @@
-<details
-  open
-  style={{
-    position: "fixed",
-    right: "0",
-    top: "10%",
-    maxHeight: "85%",
-    maxWidth: "50%",
-    zIndex: 1000,
-    overflowY: "scroll",
-  }}
->
+<details open>
   {props.children}
 </details>
